--- a/cmsplugin_embeddedmenu/templates/cmsplugin_embeddedmenu/layouts/items/default.html
+++ b/cmsplugin_embeddedmenu/templates/cmsplugin_embeddedmenu/layouts/items/default.html
@@ -1,5 +1,4 @@
-    <li class="{% if item.selected %}selected{% endif %}{% if item.ancestor %}ancestor{% endif %}{% if item.sibling %}sibling{% endif %}{% if item.descendant %}descendant{% endif %}"
-         data-node-depth="{{ item.level }}">
-     <a href="{{ item.attr.redirect_url|default:item.get_absolute_url }}">{{ item.get_menu_title }}</a>
-     {% include plugin.instance.tree_template with Children=item.children %}
-    </li>
+<li class="{% if Item.selected %}selected{% endif %} {% if Item.ancestor %}ancestor{% endif %} {% if Item.sibling %}sibling{% endif %} {% if Item.descendant %}descendant{% endif %}" data-node-depth="{{ Item.level }}">
+  <a href="{{ Item.attr.redirect_url|default:Item.get_absolute_url }}">{{ Item.get_menu_title }}</a>
+     {% include plugin.instance.tree_template with Children=Item.children %}
+ </li>
