--- a/cmsplugin_embeddedmenu/templates/cmsplugin_embeddedmenu/layouts/menus/default.html
+++ b/cmsplugin_embeddedmenu/templates/cmsplugin_embeddedmenu/layouts/menus/default.html
@@ -1,6 +1,6 @@
-  {% if Children and item.level < plugin.instance.depth %}
+  {% if Children and Item.level < plugin.instance.depth %}
   <ul>
-    {% for item in Children %}
+    {% for Item in Children %}
       {% include plugin.instance.item_template %}
     {% endfor %}
   </ul>
